# infra-demo-lnl

./: .dockerignore  dockerfile
.github/workflows/: aws.yml  main.yml
api/: .gitignore  Cargo.toml  watch.sh
api/src/: api.rs  app.rs  database.rs  main.rs  todo.rs
api/src/auth/: claims.rs  jwks.rs  mod.rs
api/src/todos/: mod.rs  todo.rs  todo_service.rs
aws/: cdk.json  package-lock.json  package.json
aws/lib/: app.ts  aws-stack.ts
client/: .env  .env.production  package.json  postcss.config.js  tailwind.config.js
client/src/: App.vue  domain.ts  main.ts
client/src/components/: Modal.vue
client/src/components/buttons/: Fab.vue
client/src/components/forms/: ToDo.vue
client/src/components/navigation/: NavBar.vue
client/src/components/todos/: ToDo.vue
client/src/composables/: auth.ts  todos.ts
client/src/router/: index.ts
client/src/views/: Home.vue  ToDos.vue
