[package]
name = "todos-api"
version = "0.1.0"
authors = ["Ryan Owens <RyanOwens@linux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
mongodb = "1.2.0"
serde = "1.0.125"
serde_json = "1.0.64"
chrono = "0.4"
bson = "1.2.0"
