[package]
name = "todos-api"
version = "0.1.0"
authors = ["Ryan Owens <RyanOwens@linux.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-web = "3.3.2"
mongodb = "1.2.0"
serde = "1.0.125"
serde_json = "1.0.64"
chrono = { version="0.4",features = ["serde"] }
bson = "1.2.0"
futures = "0.3.13"
dotenv = "0.15.0"
reqwest = { version = "0.10", features = ["json", "blocking"] }
futures-util = "0.3.13"
jsonwebtoken = "7.2.0"
actix-web-httpauth = "0.5.1"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.48"
